attempting to fix issue with zk